--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/normalize.css" />
-    <link rel="stylesheet" href="/skeleton.css" />
+    <link rel="stylesheet" href="./normalize.css" />
+    <link rel="stylesheet" href="./skeleton.css" />
 </head>
 <body>
+    <div class="container"></div>
+    <h1>Budgtr ALL</h1>
     
 </body>
 </html>
