Show Expected Apperance

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,9 @@
                 </tr>
                 <% } %>
             </table>
-        </div>
-        
+            <a href="/budgets/new">
+                <button>NEW</button>
+            </a>
+        </div>     
 </body>
 </html>
