--- a/views/new.ejs
+++ b/views/new.ejs
@@ -13,12 +13,12 @@
 <body>
     <div class="container">
         <h1>Add A New Item</h1>
-        <form action="/budgets" method="POST">
-            <input type="text" placeholder="date">
-            <input type="text" placeholder="name">
-            <input type="text" placeholder="amount">
-            <input type="text" placeholder="from">
-            <input type="text" placeholder="tags">
+        <form action="/budgets" method="post">
+            <input type="text" placeholder="date" name="date">
+            <input type="text" placeholder="name" name="name">
+            <input type="text" placeholder="amount" name="amount">
+            <input type="text" placeholder="from" name="from">
+            <input type="text" placeholder="tags" name="tags">
             <a href="/budgets">
                 <button>CREATE NEW ITEM</button>
             </a>
