--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1>Budgtr ALL</h1>
-        <h2 style="background-color: <%=Colors%>"><%=totalBankAccount%></h2>
+        <h2 style="background-color: <%=Colors%>">Bank Account: $<%=totalBankAccount%></h2>
         <table>
             <% for(let i = 0; i < wholeBudget.length; i++) { %>
                 <tr>
